# Robast-Robot-Monorepo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  environment_vars.yaml  frames.gv  notes.txt  package.xml  shell_setup.sh  sonar-project.properties  tmptxt.txt  waypoint_testing_result.txt
libs/can/: CMakeList.txt  CMakeLists.txt  library.json  package.xml
libs/can/include/: can_db.hpp  can_frame.h  can_helper.h  can_message.h  can_signal.h
libs/can/include/can/: can_db.hpp  can_db_defines.h  can_db_defines.hpp  can_frame.h  can_frame.hpp  can_helper.h  can_helper.hpp  can_message.h  can_message.hpp  can_signal.h  can_signal.hpp
libs/can/src/: can_frame.cpp  can_helper.cpp  can_message.cpp  can_signal.cpp
libs/can/test/: tests_robast_can_msgs.cpp
libs/can/tests/: tests_robast_can_msgs.cpp
libs/db_helper/: CMakeLists.txt  Readme.txt  package.xml  sql_scripts.txt
libs/db_helper/include/db_helper/: i_db_helper.h  postgresql_connector.h  postgresql_connector.hpp  postgresql_helper.h
libs/db_helper/src/: postgresql_connector.cpp  postgresql_helper.cpp
libs/module_config/: CMakeLists.txt
libs/module_config/include/module_config/: default_values_e_drawer.hpp  default_values_encoder.hpp  module_config_defines.hpp
libs/postgresql_helper/: CMakeLists.txt  package.xml
libs/postgresql_helper/include/postgresql_helper/: i_db_helper.h  postgresql_helper.h
libs/postgresql_helper/src/: postgresql_helper.cpp
libs/serial_helper/: CMakeLists.txt  package.xml
libs/serial_helper/include/: i_serial_helper.h  mock_serial_helper.h  robast_serial.h  serial_helper.h
libs/serial_helper/include/serial_helper/: i_serial_helper.h  i_serial_helper.hpp  serial_helper.h  serial_helper.hpp
libs/serial_helper/src/: mock_serial_helper.cpp  serial_helper.cpp
project_startups/oak-d/src/oak_bringup_door_opening/: CMakeLists.txt  package.xml
src/Hardware/platformio_libs/utils/: CMakeLists.txt  library.json
src/coordination_server/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/coordination_server/coordination_server/: robot_broker.py
src/coordination_server/launch/: multirobot_launch.py
src/coordination_server/models/: turtlebot3_burger.urdf.xacro
src/coordination_server/src/: coordinator.cpp
src/gazebo-plugin-autonomous-actor/: CMakeLists.txt  package.xml
src/gazebo-plugin-autonomous-actor/include/autonomous_actor/: AutonomousActorPlugin.hh
src/gazebo-plugin-autonomous-actor/src/: AutonomousActorPlugin.cc
src/gazebo-plugin-autonomous-actor2/: CMakeLists.txt  package.xml
src/gazebo-plugin-autonomous-actor2/include/autonomous_actor/: AutonomousActorPlugin.hh  AutonomousActorPlugin2.hh
src/gazebo-plugin-autonomous-actor2/src/: AutonomousActorPlugin2.cc
src/gazebo_plugins/: CMakeLists.txt  package.xml
src/gazebo_plugins/include/gazebo_plugins/: random_move_plugin.hh  remote_plugin.hpp
src/gazebo_plugins/plugin/: PatrolPlugin.cc  PatrolPlugin.hh  RandomMovePlugin.cc  patrol_plugin.hpp  plugin_template.hpp
src/gazebo_plugins/src/: patrol_plugin.cpp  plugin_template.cpp  random_move_plugin.cc  remote_plugin.cpp
src/map_server/: CMakeLists.txt  package.xml
src/map_server/config/: nav2_default_view.rviz  nav2_params.yaml  nav2_params_experimental.yaml  slam_toolbox_params.yaml
src/map_server/env-hooks/: map_server.dsv.in
src/map_server/launch/: TipluWorld.launch.py  TipluWorld_no_client.launch.py  full_nav_launch.py  map_server_launch.py  nav2_map_server_launch.py  nav_without_localization_launch.py  robot_localization_launch.py  robot_state_publisher.launch.py  rviz_launch.py  slam_toolbox_launch.py
src/map_server/maps/: 5OG.xcf  5OG.yaml
src/map_server/models/5ogNoWindowNoDoor/: model.sdf
src/map_server/models/autonomous_actor/: model.config  model.sdf
src/map_server/models/rb_theron/: model.config  rb_theron.sdf  rb_theron.urdf
src/map_server/models/turtlebot3_waffle/: model.config  turtlebot3_waffle.sdf
src/map_server/worlds/5OG/: 5OG.model  waffle.model
src/map_server/worlds/5OG_with_furniture/: 5OG_with_furniture.model
src/navigation/robast_map_update_module/: CMakeLists.txt  package.xml
src/navigation/robast_map_update_module/launch/: live_mapping_launch.py
src/navigation/robast_map_update_module/src/: map_combine_node.cpp
src/navigation/robast_nav_behavior_tree/: CMakeLists.txt  package.xml
src/navigation/robast_nav_interim_goal/: CMakeLists.txt  package.xml
src/navigation/robast_nav_interim_goal/config/: inner_door_bells.yaml  outer_door_bells.yaml
src/navigation/robast_nav_interim_goal/src/: interim_goal_selector.cpp  main.cpp
src/plugin_tmp/: CMakeLists.txt
src/robast_drawer_controller/: CMakeLists.txt  package.xml
src/robast_drawer_controller/launch/: drawer_controller_launch.py
src/robast_drawer_controller/src/: drawer_controller.cpp  main.cpp
src/robast_drawer_gate/: CMakeLists.txt  package.xml
src/robast_drawer_gate/launch/: drawer_gate_launch.py
src/robast_drawer_gate/src/: can_serial_helper.cpp  drawer_gate.cpp  main.cpp
src/robast_drawer_manager/: CMakeLists.txt  package.xml
src/robast_drawer_manager/src/: drawer_manager.cpp  main.cpp
src/robast_drawer_manager/srv/: RequestDrawer.srv
src/robast_serial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/robast_serial/include/: robast_serial.h
src/robast_serial/src/: robast_serial.cpp
src/ros2/communication_interfaces/: CMakeLists.txt  README.md  deploy.Dockerfile  package.xml
src/ros2/integration_tests_pkg/: CMakeLists.txt  package.xml  tester.py
src/turtlebot3_simulations_robast/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/turtlebot3_simulations_robast/config/: 5OG.yaml
src/turtlebot3_simulations_robast/launch/: 5_floor_withoutRobots.py  empty_world.launch.py  turtlebot3_5ogNoWindowNoDoor.launch.py  turtlebot3_autorace.launch.py  turtlebot3_world.launch.py
src/turtlebot3_simulations_robast/maps/: 5OG.yaml
src/turtlebot3_simulations_robast/plugin/: PatrolPlugin.hh  RandomMovePlugin.cc
src/turtlebot3_simulations_robast/src/: turtlebot3_drive.cpp
(+3390 files in other folders)
